--- a/api/templates/admin/user_detail.html
+++ b/api/templates/admin/user_detail.html
@@ -7,7 +7,7 @@
 {% block content %}
 <form method="post">
     <input name="id" value="{{ user.id }}" hidden/>
-    <table>
+    <table class="table table-hover">
         {% if user.id %}
         <tr>
             <td>ID</td>
@@ -19,11 +19,11 @@
         <tr><td>first_name</td><td><input name="first_name" type="text" id="first_name" value="{{ user.first_name }}"/></td></tr>
         <tr><td>last_name</td><td><input name="last_name" type="text" id="last_name" value="{{ user.last_name }}"/></td></tr>
         <!--disable email field for existing accounts-->
-        <tr><td>email</td><td><input name="email" type="text" id="email" value="{{ user.email }}" {% if user.email %}disabled{% endif %}/></td></tr>
+        <tr><td>email</td><td><input name="email" type="text" id="email" value="{{ user.email }}" required {% if user.email %}disabled{% endif %}/></td></tr>
         {% if g.user.id == user.id or 'ROOT' in g.user.roles %}
         <tr>
-            <td>password</td><td><input name="password" type="password" id="password" value="" />
-            <label> Re-enter password:</label><input name="re_password" type="password" id="re_password" value="" /></td>
+            <td>password</td><td><input name="password" type="password" id="password" value="" {% if not user.id %}required{% endif %}/>
+            <label> Re-enter password:</label><input name="re_password" type="password" id="re_password" value="" {% if not user.id %}required{% endif %}/></td>
         </tr>
         {% endif %}
         <tr><td>roles</td><td>
