--- a/api/templates/admin/users.html
+++ b/api/templates/admin/users.html
@@ -6,9 +6,32 @@
 
 {% block content %}
 <form>
-{% for user in user_list %}
-    <div>{{ user }}<button name="user_id" value={{user.id}} type="submit" formmethod="get" formaction="{{url_for('admin.user_detail')}}">Edit</button></div>
-{% endfor %}
+    <table class="table table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col" style="text-align: end;">id</th>
+                <th scope="col">first_name</th>
+                <th scope="col">last_name</th>
+                <th scope="col">email</th>
+                <th scope="col">roles</th>
+                <th scope="col">created_at</th>
+                <th scope="col">updated_at</th>
+                <th scope="col">actions</th>
+            </tr>
+        </thead>
+        {% for user in user_list %}
+            <tr>
+                <td>{{ user.id }}</td>
+                <td>{{ user.first_name }}</td>
+                <td>{{ user.last_name }}</td>
+                <td>{{ user.email }}</td>
+                <td>{{ user.roles }}</td>
+                <td>{{ user.created_at }}</td>
+                <td>{{ user.updated_at }}</td>
+                <td><button name="user_id" value={{user.id}} type="submit" formmethod="get" formaction="{{url_for('admin.user_detail')}}">Edit</button></td>
+            </tr>
+        {% endfor %}
+    </table>
     <input value="Create user" type="submit" formaction="{{url_for('admin.user_create')}}"/>
 </form>
 {% endblock %}
