--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, width=device-width">
+
+    <!-- http://getbootstrap.com/docs/4.5/ -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
+    <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet">
+
+    <!-- http://getbootstrap.com/docs/4.5/ -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-<nav>
-  <h1>Tipper</h1>
-  <ul>
-      <li><a href="{{url_for('admin.index')}}">Admin home</a></li>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark border">
+  <h1 class="navbar-brand">Tipper</h1>
+  <ul class="navbar-nav mr-auto mt-2">
+      <li class="nav-item"><a class="nav-link" href="{{url_for('admin.index')}}">Admin home</a></li>
+  </ul>
+  <ul class="navbar-nav ml-auto mt-2">
     {% if g.user %}
-      <li><span>{{ g.user.email }}</span>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
+      <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
     {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
+      <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+      <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
     {% endif %}
   </ul>
 </nav>
-<section class="content">
+{% if g.user %}
+<div class="container">Logged in as {{ g.user.email }}</div>
+{% endif %}
+<section class="container p-5">
+
   <header>
     {% block header %}{% endblock %}
+
   </header>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-  {% block content %}{% endblock %}
+
+    {% for message in get_flashed_messages() %}
+        <div class="flash">{{ message }}</div>
+    {% endfor %}
+    {% block content %}{% endblock %}
 </section>
 
 </body>
