scrapers into classes, added scrape api functionality and html, added user management func

--- a/api/templates/admin/admin_home.html
+++ b/api/templates/admin/admin_home.html
@@ -6,6 +6,9 @@
 
 {% block content %}
 <ul>
-    <li><a href="{{url_for('admin.users')}}">User Management</a></li>
+    <li><a href="{{url_for('users.users')}}">User Management</a></li>
+    <li><a href="{{url_for('scrape_api.scrape_management')}}">Datascrape Controls</a></li>
+    <li>Database Management</li>
+    <li>Model Management</li>
 </ul>
 {% endblock %}
