finishe scrape api, start db and model mgmt api

--- a/api/templates/admin/admin_home.html
+++ b/api/templates/admin/admin_home.html
@@ -8,7 +8,7 @@
 <ul>
     <li><a href="{{url_for('users.users')}}">User Management</a></li>
     <li><a href="{{url_for('scrape_api.scrape_management')}}">Datascrape Controls</a></li>
-    <li>Database Management</li>
-    <li>Model Management</li>
+    <li><a href="{{url_for('db_mgmt_api.db_mgmt_home')}}">Database Management</a></li>
+    <li><a href="{{url_for('model_mgmt_api.model_mgmt_home')}}">Model Management</a></li>
 </ul>
 {% endblock %}
