--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="initial-scale=1, width=device-width">
 
     <!-- http://getbootstrap.com/docs/4.5/ -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
     <link rel="icon" href="/static/favicon.ico">
@@ -13,41 +14,62 @@
     <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet">
 
     <!-- http://getbootstrap.com/docs/4.5/ -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            crossorigin="anonymous"></script>
 
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark border">
-  <h1 class="navbar-brand">Tipper</h1>
-  <ul class="navbar-nav mr-auto mt-2">
-      <li class="nav-item"><a class="nav-link" href="{{url_for('admin.index')}}">Admin home</a></li>
-  </ul>
-  <ul class="navbar-nav ml-auto mt-2">
-    {% if g.user %}
-      <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
-    {% else %}
-      <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
-      <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
-    {% endif %}
-  </ul>
+    <h1 class="navbar-brand">Tipper</h1>
+    <ul class="navbar-nav mr-auto mt-2">
+        <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.index') }}">Admin home</a></li>
+    </ul>
+    <ul class="navbar-nav ml-auto mt-2">
+        {% if g.user %}
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+                {% else %}
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+        {% endif %}
+    </ul>
 </nav>
 {% if g.user %}
-<div class="container">Logged in as {{ g.user.email }}</div>
+    <div class="container">Logged in as {{ g.user.email }}</div>
 {% endif %}
 <section class="container p-5">
     {% for message in get_flashed_messages() %}
-        <div class="flash">{{ message }}</div>
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="toastAlert" data-delay="5000">
+            <div class="toast-header">
+                <strong class="mr-auto">Notification</strong>
+                <small>just now</small>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="toast-body">
+                {{ message }}
+            </div>
+        </div>
+
     {% endfor %}
     <br/>
-  <header>
-    {% block header %}{% endblock %}
+    <header>
+        {% block header %}{% endblock %}
 
-  </header>
+    </header>
 
     {% block content %}{% endblock %}
 </section>
 
+<script>
+$(document).ready(function(){
+  $('.toast').toast('show');
+});
+</script>
 </body>
 </html>
