--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -33,8 +33,8 @@
         {% if g.user %}
             <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
                 {% else %}
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.admin_register') }}">Register</a>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.admin_login') }}">Log In</a>
         {% endif %}
     </ul>
 </nav>
