changes after reading docs - added cache decorator

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -9,7 +9,7 @@
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
-    <link rel="icon" href="/static/favicon.ico">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
     <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet">
 
