--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -17,7 +17,7 @@
             crossorigin="anonymous"></script>
 
     {% block base_headblock %}{% endblock %}
-    <title>{% block title %}{% endblock %}</title>
+    <title>Tipper - {% block title %}{% endblock %}</title>
 </head>
 <body>
 {% block navblock %}{% endblock %}
