--- a/api/static/styles.css
+++ b/api/static/styles.css
@@ -37,7 +37,28 @@ main {
     color: rgb(236, 113, 113);
 }
 
+.img-wrapper{
+    position: relative;
+    overflow:hidden;
+    height:800px;
+}
 
+.img-wrapper img{
+    position: absolute;
+    top:-100%; left:0; right: 0; bottom:-100%;
+    margin: auto;
+}
+
+.card {
+    width: 350px;
+    max-width: 350px;
+}
+
+.card:hover{
+     transform: scale(1.02);
+    transition: ease all 0.3s;
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
 
 .statcheckboxes {
     padding:10px;
@@ -56,6 +77,10 @@ main {
     margin: auto;
     padding: 10px;
     border-radius: 10px;
+}
+
+.form-text-input {
+    max-width: 500px;
 }
 
 @media (min-width: 992px) {
