--- a/api/templates/app/login.html
+++ b/api/templates/app/login.html
@@ -1,26 +1,31 @@
 {% extends "app/app_base.html" %}
 
 {% block title %}
-
-Log In
-
+    Log In
 {% endblock %}
 
 {% block main %}
-<div class="container">
-    
-    <form action="{{ url_for('auth.login') }}" method="post">
-        <div class="form-group">
-            <input type="text" required autofocus autocomplete="off" class="form-control" name="email"  placeholder="Email">
-          </div>
-          <div class="form-group">
-            <input type="password" required class="form-control" name="password" placeholder="Password">
-          </div>
-          {% if error %}
-            <p style="color: red;">{{ error }} </p>
-          {% endif %}
-          <button type="submit" class="btn btn-primary">Log In</button>
-    </form>
-    
-</div>
+    <div class="container col-sm-3">
+        <div class="row justify-content-start">
+            <h1 class="display-5 ">Login</h1>
+        </div>
+        <hr/>
+        <form action="{{ url_for('auth.login') }}" method="post">
+
+            <div class="form-group row">
+                <label for="email" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-10">
+                    <input type="text" required autofocus autocomplete="off" class="form-control" name="email">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="email" class="col-sm-2 col-form-label">Password</label>
+                <div class="col-sm-10">
+                    <input type="password" required class="form-control" name="password">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Log In</button>
+        </form>
+
+    </div>
 {% endblock %}
