--- a/api/templates/app/register.html
+++ b/api/templates/app/register.html
@@ -5,30 +5,44 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container">
-
+    <div class="container col-sm-3">
+        <div class="row justify-content-start">
+            <h1 class="display-5 ">Register</h1>
+        </div>
+        <hr/>
         <form action="{{ url_for('auth.register') }}" method="post">
-            <div class="form-group">
-                <input type="text" required autofocus autocomplete="off" class="form-control" name="first_name"
-                       placeholder="First Name">
+            <div class="form-group row">
+                <label for="first_name" class="col-sm-4 col-form-label">First Name</label>
+                <div class="col-sm-8">
+                    <input type="text" required autofocus autocomplete="off" class="form-control" name="first_name">
+                </div>
             </div>
-            <div class="form-group">
-                <input type="text" required autofocus autocomplete="off" class="form-control" name="last_name"
-                       placeholder="Last Name">
+            <div class="form-group row">
+                <label for="last_name" class="col-sm-4 col-form-label">Last Name</label>
+                <div class="col-sm-8">
+                    <input type="text" required autofocus autocomplete="off" class="form-control" name="last_name">
+                </div>
             </div>
-            <div class="form-group">
-                <input type="text" required autofocus autocomplete="off" class="form-control" name="email"
-                       placeholder="Email">
+            <div class="form-group row">
+                <label for="email" class="col-sm-4 col-form-label">Email</label>
+                <div class="col-sm-8">
+                    <input type="text" required autofocus autocomplete="off" class="form-control" name="email">
+                </div>
             </div>
-            <div class="form-group">
-                <input type="password" required class="form-control" name="password" placeholder="Password">
+            <div class="form-group row">
+                <label for="password" class="col-sm-4 col-form-label">Password</label>
+                <div class="col-sm-8">
+                    <input type="text" required autofocus autocomplete="off" class="form-control" name="password">
+                </div>
             </div>
-            <div class="form-group">
-                <input type="password" required class="form-control" name="re_password" placeholder="Re-enter Password">
+            <div class="form-group row">
+                <label for="re_password" class="col-sm-4 col-form-label">Re-enter Password</label>
+                <div class="col-sm-8">
+                    <input type="text" required autofocus autocomplete="off" class="form-control" name="re_password">
+                </div>
             </div>
-            {% if error %}
-                <p style="color: red;">{{ error }} </p>
-            {% endif %}
+
+
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
 
