some shitty design updates

--- a/api/templates/app/teamdetail.html
+++ b/api/templates/app/teamdetail.html
@@ -50,7 +50,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container-fluid" id="teamdetail">
+    <div class="container-fluid p-5" id="teamdetail">
         <div class="row" style="margin: auto;">
             {% if not team %}
                 <h1 class="display-4">Choose Team</h1>
