--- a/api/templates/app/ladder.html
+++ b/api/templates/app/ladder.html
@@ -5,7 +5,7 @@ Ladder
 {% endblock %}
 
 {% block main %}
-<div class="container-fluid">
+<div class="container-fluid p-5">
     <div class="row justify-content-start">
         <h1 class="display-5 ">Ladder</h1>
     </div>
