--- a/api/templates/app/odds.html
+++ b/api/templates/app/odds.html
@@ -5,7 +5,7 @@ Odds
 {% endblock %}
 
 {% block main %}
-<div class="container">
+<div class="container-fluid p-5">
     <!-- TODO: enable search for different rounds odds -->
     <!-- <div class='row'>
         <div class='col-sm' id='tipfilter'>
