--- a/api/templates/app/predict.html
+++ b/api/templates/app/predict.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container-fluid">
+    <div class="container-fluid p-5">
         <div class="row justify-content-start">
             <h1 class="display-5 ">Predict</h1>
         </div>
