--- a/api/templates/app/user_profile.html
+++ b/api/templates/app/user_profile.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container">
+    <div class="container p-5">
         <div class="row justify-content-center">
             <h1 class="display-5 ">Hello {{ user_detail.first_name }} {{ user_detail.last_name }}</h1>
         </div>
