--- a/tipperapi/templates/admin/model_build.html
+++ b/tipperapi/templates/admin/model_build.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <form method="post" autocomplete="off">
+    <form method="post" autocomplete="off" class="bg-white border">
         <input autocomplete="false" name="hidden" type="text" style="display:none;">
         <table class="table table-hover">
             <tr>
