--- a/tipperapi/templates/admin/scraper_management.html
+++ b/tipperapi/templates/admin/scraper_management.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <table class="table table-bordered p-0" style="width: 80%">
+    <table class="table table-bordered p-0 bg-white border" style="width: 80%">
         <tr>
             <td class="p-1">
                 <form action="{{ url_for('admin.scrape_api.trigger_scrape_players') }}" method="get">
@@ -84,7 +84,7 @@
     <br>
     <h2>History</h2>
     <form>
-        <table class="table table-hover">
+        <table class="table table-hover bg-white border">
             <thead class="thead-dark">
             <tr>
                 <th scope="col" style="text-align: end;">id</th>
