--- a/tipperapi/templates/admin/users/users.html
+++ b/tipperapi/templates/admin/users/users.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block content %}
-<form>
-    <table class="table table-hover">
+<form class="bg-white border">
+    <table class="table table-hover ">
         <thead class="thead-dark">
             <tr>
                 <th scope="col" style="text-align: end;">id</th>
