--- a/tipperapi/templates/app/user_profile.html
+++ b/tipperapi/templates/app/user_profile.html
@@ -6,12 +6,12 @@
 
 {% block main %}
     <div class="container p-5">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center bg-white border">
             <h1 class="display-5 ">Hello {{ user_detail.first_name }} {{ user_detail.last_name }}</h1>
         </div>
         <hr/>
         <br/>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center bg-white border">
             <div class='col-xs'>
                 <form>
                     <div class="form-group">
