--- a/tipperapi/templates/admin/model_management.html
+++ b/tipperapi/templates/admin/model_management.html
@@ -11,7 +11,7 @@
         <li><a href="{{ url_for('admin.model_mgmt_api.get_historical_models') }}">get_historical_models</a></li>
         <li><a href="{{ url_for('admin.model_mgmt_api.build_model') }}">build custom model</a></li>
     </ul>
-    <table class="table table-hover">
+    <table class="table table-hover bg-white border">
         <thead class="thead-dark">
         <tr>
             <th scope="col" style="text-align: end;">id</th>
