--- a/tipperapi/templates/admin/users/user_detail.html
+++ b/tipperapi/templates/admin/users/user_detail.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block content %}
-<form method="post" autocomplete="off">
+<form method="post" autocomplete="off" class="bg-white">
     <input autocomplete="false" name="hidden" type="text" style="display:none;">
     <input name="id" value="{{ user.id }}" hidden/>
-    <table class="table table-hover">
+    <table class="table table-hover ">
         {% if user.id %}
         <tr>
             <td>ID</td>
