--- a/tipperapi/templates/app/ladder.html
+++ b/tipperapi/templates/app/ladder.html
@@ -5,17 +5,18 @@ Ladder
 {% endblock %}
 
 {% block main %}
-<div class="container-fluid p-5">
+<div class="container-fluid p-5 ">
     <div class="row justify-content-start">
         <h1 class="display-5 ">Ladder</h1>
     </div>
     <hr/>
     <br/>
     <div class="row">
-        <div class='col-xs'>
-            <form action="/ladder" method="post">
-                <div class="form-group">
-                    <label>Season: </label>
+        <div class='col-lg-2'>
+            <form class="row row-cols-lg-auto g-3 align-items-center" action="/ladder" method="post">
+                <div class="input-group">
+                    <div class="col-6">
+                    <label for="season">Season: </label>
                     <select required autocomplete="off" class="form-control" name="season"  placeholder="Season" style="vertical-align:middle">
                         <option disabled selected value="">Season</option>
                         {% for s in ['2019','2020','2021','2022','2023'] %}
@@ -26,13 +27,14 @@ Ladder
                             {% endif %}
                         {% endfor %}
                     </select>
-                    <button type="submit" class="btn btn-primary">Get Ladder</button>
+                    </div>
+                    <button type="submit" class="btn btn-primary col-6">Get Ladder</button>
                 </div>
             </form>
         </div>
         {% if ladder %}
         <br/>
-        <div class="col-lg">
+        <div class="col-md-6 m-2 bg-white p-2 border">
             <table class="table table-hover" style="max-width: 1100px; margin:auto">
                 <thead class="thead-dark">
                     <tr><th colspan="5"><h1>{{season}} Ladder</h1></th></tr>
