--- a/tipperapi/templates/app/login.html
+++ b/tipperapi/templates/app/login.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container col-sm-3 p-5">
+    <div class="container col-sm-3 p-5 bg-white" >
         <div class="row justify-content-start">
             <h1 class="display-5 ">Login</h1>
         </div>
