--- a/tipperapi/templates/app/predict.html
+++ b/tipperapi/templates/app/predict.html
@@ -12,7 +12,7 @@
         <hr/>
         <br/>
         <div class="row">
-            <div class='col-sm-5'>
+            <div class='col-sm-5 bg-white p-2 border'>
                 <form action="{{ url_for('app.predict.predict') }}" method="post">
                     <div class="row">
                         <legend class="col-form-label col-sm-2 pt-0">Teams</legend>
@@ -94,7 +94,7 @@
                                 <tr>
 
                                     <td>
-                                        <table hidden id="year_round_table" class="col-sm-3 table table-sm table-hover">
+                                        <table hidden id="year_round_table" class="col-sm-3 table table-sm table-hover bg-white border p-1">
                                             <thead class="thead">
                                             <tr>
                                                 <th scope="col">Included</th>
@@ -204,9 +204,9 @@
             </div>
 
 
-            <div class="col-lg">
+            <div class="col-lg ">
                 {% if prediction %}
-                    <table class="table table-hover" style="max-width: 1100px; margin:auto">
+                    <table class="table table-hover bg-white border" style="max-width: 1100px; margin:auto">
                         <thead class="thead-dark">
                         <tr>
                             <th colspan="5"><h1>Result</h1></th>
@@ -223,7 +223,7 @@
                             <td>{{ team_map[prediction.winner] }}</td>
                         </tr>
                     </table>
-                    <table class="table table-hover" style="max-width: 1100px; margin:auto">
+                    <table class="table table-hover bg-white border" style="max-width: 1100px; margin:auto">
                         <thead class="thead-dark">
                         <tr>
                             <th colspan="6"><h1>Model details</h1></th>
