--- a/tipperapi/templates/app/teamdetail.html
+++ b/tipperapi/templates/app/teamdetail.html
@@ -50,11 +50,11 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container-fluid p-5" id="teamdetail">
+    <div class="container-fluid p-5 " id="teamdetail">
         <div class="row" style="margin: auto;">
             {% if not team %}
                 <h1 class="display-4">Choose Team</h1>
-                <div class="container teamdetailchoice">
+                <div class="container teamdetailchoice bg-white">
                     {% for t in teamslist %}
                         <form href="/teamdetail" method="get" style="padding: 2px;">
                             <input type="hidden" name="team" value="{{ t.team_identifier }}"/>
@@ -64,7 +64,7 @@
                     {% endfor %}
                 </div>
             {% else %}
-                <div class="col-xs-3 jumbotron" style="margin: auto; margin-bottom: 40px; background-color: #ffffff;">
+                <div class="col-xs-3 jumbotron bg-transparent" style="margin: auto; margin-bottom: 40px; background-color: #ffffff;">
                     <image src='/static/logos/{{ team }}.png' alt="team-logo" style="width: 200px;">
                         <h1 class="display-4">
                             {% if team_detail %}
@@ -76,7 +76,7 @@
                     </image>
                 </div>
                 <div class="col-8" style="margin: auto; display: flex; justify-content: center;">
-                    <table class="table-sm table-striped table-bordered">
+                    <table class="table-sm table-striped table-bordered bg-white ">
                         <thead class="thead-dark">
                         <tr>
                             <th colspan="9"><h1 class="display-5">Last 10 Games by Season</h1></th>
@@ -120,7 +120,7 @@
                     </table>
                 </div>
                 </div>
-                <div class="container" style="max-width: 1100px;">
+                <div class="container bg-white border " style="max-width: 1100px;">
                     <div class="row" style="height: 40px;"></div>
                     <form action="/teamdetail" method="post">
                         <div class="row statcheckboxes">
