--- a/tipperapi/templates/base.html
+++ b/tipperapi/templates/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="initial-scale=1, width=device-width">
 
     <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='responsive-full-background-image.css') }}">
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
