--- a/tipperapi/templates/admin/admin_base.html
+++ b/tipperapi/templates/admin/admin_base.html
@@ -13,7 +13,7 @@
             {% if g.user %}
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
                     {% else %}
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.admin_login') }}">Log In</a>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
             {% endif %}
         </ul>
     </nav>
