--- a/tipperapi/templates/admin/users/user_detail.html
+++ b/tipperapi/templates/admin/users/user_detail.html
@@ -43,7 +43,7 @@
         <input type="submit" formaction="{{url_for('admin.users.update')}}" value="Update">
         <input type="submit" formaction="{{url_for('admin.users.delete')}}" value="Delete">
         {% else %}
-        <input type="submit" formaction="{{url_for('auth.admin_register')}}" value="Create">
+        <input type="submit" formaction="{{url_for('admin.users.update')}}" value="Create">
         {% endif %}
     </div>
 </form>
